add user for example component

--- a/src/app/layout/layout.html
+++ b/src/app/layout/layout.html
@@ -81,6 +81,11 @@
 
         <mat-divider class="!my-3"></mat-divider>
 
+        <a mat-list-item routerLink="/users" routerLinkActive="sidenav-active" class="!rounded-lg !mx-2">
+          <mat-icon matListItemIcon>group</mat-icon>
+          <span matListItemTitle>Users</span>
+        </a>
+
         <a mat-list-item routerLink="/blank" routerLinkActive="sidenav-active" class="!rounded-lg !mx-2">
           <mat-icon matListItemIcon>article</mat-icon>
           <span matListItemTitle>Blank Page</span>
