--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -58,7 +58,7 @@
           <!-- Remember Me & Forgot Password -->
           <div class="flex items-center justify-between">
             <mat-checkbox formControlName="remember" color="primary">
-              <span class="text-sm text-gray-700">Remember me</span>
+              <span class="text-sm text-gray-700 dark:text-gray-300">Remember me</span>
             </mat-checkbox>
             <a href="#" class="text-sm font-medium text-indigo-600 hover:text-indigo-700 transition-colors">
               Forgot password?
@@ -82,7 +82,7 @@
         <div class="relative my-8">
           <mat-divider></mat-divider>
           <div class="absolute inset-0 flex items-center justify-center">
-            <span class="bg-white px-4 text-sm text-gray-500">Or continue with</span>
+            <span class="bg-white dark:bg-gray-800 px-4 text-sm text-gray-500 dark:text-gray-400">Or continue with</span>
           </div>
         </div>
 
@@ -91,29 +91,29 @@
           <button 
             mat-stroked-button 
             type="button"
-            class="!py-3 hover:!bg-gray-50 transition-colors"
+            class="!py-3 hover:!bg-gray-50 dark:hover:!bg-gray-700 transition-colors"
           >
             <mat-icon class="!text-red-500">mail</mat-icon>
           </button>
           <button 
             mat-stroked-button 
             type="button"
-            class="!py-3 hover:!bg-gray-50 transition-colors"
+            class="!py-3 hover:!bg-gray-50 dark:hover:!bg-gray-700 transition-colors"
           >
             <mat-icon class="!text-blue-600">facebook</mat-icon>
           </button>
           <button 
             mat-stroked-button 
             type="button"
-            class="!py-3 hover:!bg-gray-50 transition-colors"
+            class="!py-3 hover:!bg-gray-50 dark:hover:!bg-gray-700 transition-colors"
           >
-            <mat-icon class="!text-gray-900">apple</mat-icon>
+            <mat-icon class="!text-gray-900 dark:!text-gray-100">apple</mat-icon>
           </button>
         </div>
 
         <!-- Sign Up Link -->
         <div class="text-center mt-6">
-          <p class="text-sm text-gray-600">
+          <p class="text-sm text-gray-600 dark:text-gray-400">
             Don't have an account?
             <a routerLink="/signup" class="font-medium text-indigo-600 hover:text-indigo-700 transition-colors ml-1">
               Sign up now
