--- a/src/material-theme.scss
+++ b/src/material-theme.scss
@@ -8,6 +8,7 @@
 
 html {
   height: 100%;
+  color-scheme: light;
   @include mat.theme((
     color: (
       primary: mat.$azure-palette,
@@ -16,14 +17,13 @@ html {
     typography: Roboto,
     density: 0,
   ));
+
+  &.dark {
+    color-scheme: dark;
+  }
 }
 
 body {
-  // Default the application to a light color theme. This can be changed to
-  // `dark` to enable the dark color theme, or to `light dark` to defer to the
-  // user's system settings.
-  color-scheme: light;
-
   // Set a default background, font and text colors for the application using
   // Angular Material's system-level CSS variables. Learn more about these
   // variables at https://material.angular.dev/guide/system-variables
